Дополнил API для комментариев
